Fix cross-origin auto height & add settings

--- a/public/searchApi.html
+++ b/public/searchApi.html
@@ -208,7 +208,7 @@
         // Emulate wait time
         setTimeout(function() {
           sendMessage('ready', {
-            qs: parseQueryString()
+            height: document.documentElement.scrollHeight
           })
         }, Number.parseInt(parameters.wait * 1000))
 
