--- a/public/searchApi.html
+++ b/public/searchApi.html
@@ -211,7 +211,7 @@
           sendMessage('ready', {
             height: document.documentElement.scrollHeight
           })
-        }, Number.parseInt(parameters.wait * 1000))
+        }, Number.parseInt(parameters.wait))
 
         render()
       }
