--- a/public/viewApi.html
+++ b/public/viewApi.html
@@ -102,7 +102,7 @@
           sendMessage('ready', {
             height: document.documentElement.scrollHeight
           })
-        }, Number.parseInt(parameters.wait * 1000))
+        }, Number.parseInt(parameters.wait))
 
         render(JSON.parse(decodeURIComponent(parameters.p)))
       }
