--- a/public/searchApi.html
+++ b/public/searchApi.html
@@ -117,11 +117,11 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      const sendMessage = function(subtype, data) {
+      const sendMessage = function(action, data) {
         window.parent.postMessage(
           JSON.stringify({
-            type: 'custom_embed',
-            subtype,
+            source: 'custom_embed',
+            action,
             data
           }),
           '*'
@@ -143,40 +143,41 @@
         {
           id: 1,
           text:
-            'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.',
-          data: {}
+            'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
         },
         {
           id: 2,
           text:
-            'Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.',
-          data: {}
+            'Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
         },
         {
           id: 3,
           text:
-            'Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.',
-          data: {}
+            'Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.'
         },
         {
           id: 4,
           text:
-            'Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. ',
-          data: {}
+            'Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. '
         },
         {
           id: 5,
           text:
-            'Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag.',
-          data: {}
+            'Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag.'
         },
         {
           id: 6,
           text:
-            'Blue bottle put a bird on it twee prism biodiesel brooklyn. Blue bottle ennui tbh succulents.',
-          data: {}
+            'Blue bottle put a bird on it twee prism biodiesel brooklyn. Blue bottle ennui tbh succulents.'
         }
-      ]
+      ].map(config => ({
+        id: Math.floor(Math.random() * Number.MAX_SAFE_INTEGER).toString(16),
+        url: `https://my.content.com/data/${config.id}`,
+        config: {
+          ...config,
+          image_id: Math.floor((config.id + 1) * (Math.random() * 21))
+        }
+      }))
       const handleClick = index => event => {
         sendMessage('data', data[index])
       }
@@ -185,11 +186,10 @@
         const template = document.getElementById('content_template').innerHTML
 
         for (i = 0; i < data.length; i++) {
-          data[i].image_id = Math.floor((i + 1) * (Math.random() * 21))
           const html = template
             .replace('%item_id%', 'row-' + data[i].id)
-            .replace('%image_id%', data[i].image_id)
-            .replace('%text%', data[i].text)
+            .replace('%image_id%', data[i].config.image_id)
+            .replace('%text%', data[i].config.text)
           const element = document.createElement('div')
           document.getElementById('search_content').appendChild(element)
           element.outerHTML = html
