Fix autoheight of view/edit plugins

--- a/public/editApi.html
+++ b/public/editApi.html
@@ -30,6 +30,7 @@
                 <img
                   class="card-img-top"
                   id="edit_image"
+                  style="min-height: 100px;"
                   data-src="https://picsum.photos/200/100/?image=%image_id%"
                   alt="Card image cap"
                 />
