--- a/public/editApi.html
+++ b/public/editApi.html
@@ -81,7 +81,8 @@
           JSON.stringify({
             source: 'custom_embed',
             action,
-            data
+            data,
+            key: parseQueryString()['k']
           }),
           '*'
         )
