Make a rectangle around the audio search items

--- a/public/audioSearchApi.html
+++ b/public/audioSearchApi.html
@@ -203,7 +203,7 @@
             </div>
             <div class="mt-3">
               <div class="bs-example">
-                <div class="list-group list-group-flush" id="search_content" />
+                <div class="list-group" id="search_content" />
               </div>
             </div>
           </div>
