make ID string to make ANS happy

--- a/public/audioSearchApi.html
+++ b/public/audioSearchApi.html
@@ -305,7 +305,7 @@
         
         setTimeout(() => {
           sendMessage('data', {
-            id: index,
+            id: `aud-${index}`,
             url: songs[index].url,
             config: songs[index]
           })
