Add resource preload

--- a/public/audioViewApi.html
+++ b/public/audioViewApi.html
@@ -12,6 +12,10 @@
     ></script>
 
     <link rel="stylesheet" type="text/css" href="css/app.css" />
+    <link rel="preload" href="img/pause.svg" as="image" />
+    <link rel="preload" href="img/volume.svg" as="image" />
+    <link rel="preload" href="img/mute.svg" as="image" />
+    <link rel="preload" href="img/now-playing.svg" as="image" />
   </head>
   <body>
     <main role="main">
