Use seed length value instead of provided by the Amplitude

--- a/public/audioSearchApi.html
+++ b/public/audioSearchApi.html
@@ -79,7 +79,7 @@
                   class="fas amplitude-play-pause"
                   data-amplitude-song-index="{{index}}"
                   style="width: 1.2em;"></i>
-                <small class="text-muted w-50">length: <span class="amplitude-time-remaining" data-amplitude-song-index="{{index}}"></span></small>
+                <small class="text-muted w-50">length: {{length}}</small>
             </span>
           </div>
         </div>
