Do not preload, too heavy

--- a/public/audioSearchApi.html
+++ b/public/audioSearchApi.html
@@ -352,7 +352,7 @@
 
         render()
 
-        Amplitude.init({ songs, preload: 'auto' })
+        Amplitude.init({ songs })
       }
     </script>
   </body>
