--- a/public/audioSearchApi.html
+++ b/public/audioSearchApi.html
@@ -37,7 +37,7 @@
       .list-group-item-action:hover:not(.active),
       .list-group-item-action:visited:not(.active) {
         color: #495057;
-        background-color: white;        
+        background-color: white;
       }
       .active-animate {
         animation: flash-animation 1000ms 1;
@@ -56,7 +56,7 @@
           background-color: white;
           border-color: white;
         }
-      }      
+      }
     </style>
   </head>
   <body>
@@ -237,7 +237,8 @@
             source: 'custom_embed',
             action,
             data,
-            key: parseQueryString()['k']
+            key: parseQueryString()['k'],
+            isAnsRequired: false,
           }),
           '*'
         )
@@ -304,7 +305,7 @@
           return
         }
         listGroupItem.classList.add('active-animate')
-        
+
         setTimeout(() => {
           sendMessage('data', {
             id: `aud-${index}`,
@@ -354,6 +355,11 @@
 
         Amplitude.init({ songs })
       }
+
+      /*** Uncomment to see the received message ***/
+      // window.addEventListener('message', (e) => {
+      //   console.log(e)
+      // }, false)
     </script>
   </body>
 </html>
