EL-3086 - fixed doucmentation to match the naming convention

--- a/public/audioSearchApi.html
+++ b/public/audioSearchApi.html
@@ -239,7 +239,7 @@
           key: parseQueryString()['k']
         }
         if (action === 'ready') {
-          messagePayload.isAnsRequired = false
+          messagePayload.isAnsRequired = true
         }
         window.parent.postMessage(JSON.stringify(messagePayload), '*')
       }
