--- a/public/audioSearchApi.html
+++ b/public/audioSearchApi.html
@@ -355,6 +355,9 @@
 
         Amplitude.init({ songs })
       }
+      window.addEventListener('message', (e) => {
+        console.log(e)
+      }, false)
     </script>
   </body>
 </html>
