--- a/public/viewApi.html
+++ b/public/viewApi.html
@@ -63,21 +63,15 @@
             source: 'custom_embed',
             action,
             data,
-            key: parseQueryString()['k']
+            key: parseQueryString('k')
           }),
           '*'
         )
       }
 
-      const parseQueryString = function() {
-        const params = location.search.split('?')[1] || ''
-        const kv = params.split('&')
-        return kv.reduce((result, item) => {
-          const [key, value] = item.split('=')
-          return Object.assign(result, {
-            [key]: value
-          })
-        }, {})
+      const parseQueryString = function(key) {
+        const url = new URL(location.href)
+        return url.searchParams.get(key)
       }
 
       const render = data => {
@@ -93,20 +87,14 @@
       }
 
       window.onload = function() {
-        const parameters = Object.assign(
-          {
-            wait: 0
-          },
-          parseQueryString()
-        )
-        render(JSON.parse(decodeURIComponent(parameters.p)))
+        render(JSON.parse(parseQueryString('p')))
 
         // Emulate wait time
         setTimeout(function() {
           sendMessage('ready', {
             height: document.documentElement.scrollHeight
           })
-        }, Number.parseInt(parameters.wait) + 10)
+        }, Number.parseInt(parseQueryString('wait') || 0) + 10)
 
       }
     </script>
